--- a/UI/add-style.css
+++ b/UI/add-style.css
@@ -113,6 +113,10 @@
 	height: auto;
 }
 
+.burgerMenu {
+	display: none;
+}
+
 .adm-container {
 	width: 75%;
 }
@@ -321,4 +325,333 @@ input[type="color"] {
 
 #submit-btn svg {
 	margin-left: 1rem;
+}
+
+@media screen and (max-width: 767px) {
+	.dashboard {
+		display: flex;
+		height: 100vh;
+		overflow: visible;
+	}
+
+	.navbar {
+		position:fixed;
+		top: 0;
+		right: 100%;
+		width: 100%;
+		min-height: 100vh;
+		display: block;
+		z-index: 1;
+		-webkit-transition: 0.4s;
+		transition: 0.4s;
+		background-color: rgba(165, 61, 255, 0.6);
+		backdrop-filter: blur(5px);
+		padding: 3rem;
+		border-radius: 0;
+	}
+
+	.navbar hr {
+		height: 1px;
+	}
+
+	#logo {
+		display: flex;
+		justify-content: start;
+		align-items: center;
+		gap: 12px;
+		margin: 0 2rem;
+	}
+
+	#logo-letter {
+		display: flex;
+		height: 56px;
+		padding: 0px 20px;
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 10px;
+		border-radius: 1000px;
+		background: var(--Gray-White);
+		color: var(--Primary-500);
+		font-family: "Work Sans", sans-serif;
+		font-size: 20px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: 56px;
+	}
+
+	#logo-name {
+		color: var(--Gray-White);
+		font-family: "Work Sans", sans-serif;
+		font-size: 26px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: 40px;
+	}
+
+	.menu {
+		display: grid;
+		list-style: none;
+		margin: 5rem 0;
+		width: 100%;
+	}
+
+	.menu a {
+		font-weight: 600;
+		text-decoration: none;
+		color: var(--Gray-White);
+		font-family: "Work Sans", sans-serif;
+		padding: 12px 12px;
+		font-size: 28px;
+	}
+
+	.menu a:hover {
+		height: 80%;
+		border-left: 3px var(--Gray-White) solid;
+	}
+
+	.menu svg {
+		width: 40px;
+		height: auto;
+	}
+
+	.adm-container {
+		width: 100%;
+	}
+
+	.header-div {
+		display: flex;
+		width: 100%;
+		justify-content: start;
+		background-color: var(--Gray-White);
+		box-shadow: 0 0 0 0;
+		padding: 0.5rem;
+	}
+
+	.prl-container {
+		display: flex;
+		margin-right: 2rem;
+	}
+
+	.prf-ph  {
+		margin: 0.5rem 1rem;
+	}
+
+	.prf-ph img {
+		max-width: 100%;
+		max-height: 100%;
+		width: 40px;
+		height: 40px;
+		border-radius: 50%;
+	}
+
+	.prf-ph svg {
+		position: absolute;
+		top: 0.8rem;
+		right: 3.2rem;
+		left: 3.5rem;
+	}
+
+
+	.burgerMenu {
+		position: relative;
+		display: block;
+		width: 35px;
+		cursor: pointer;
+		appearance: none;
+		background: none;
+		outline: none;
+		border: none;
+		z-index: 1;
+	}
+
+	.burgerMenu .menuBar,
+	.burgerMenu:after, 
+	.burgerMenu:before {
+		content: '';
+		display: block;
+		width: 100%;
+		height: 5px;
+		background-color: var(--Gray-800);
+		margin: 6px 0;
+		transition: 0.4s;
+	}
+
+	.burgerMenu.is-active:before {
+		transform: rotate(-45deg) translate(-8px, 6px);
+	}
+
+	.burgerMenu.is-active:after {
+		transform: rotate(45deg) translate(-9px, -8px);
+	}
+
+	.burgerMenu.is-active .menuBar {
+		opacity: 0;
+	}
+
+	.navbar.is-active {
+		right:0;
+	}
+
+	.add-art-container {
+		width: 100%;
+		margin: 1rem 0;
+		font-family: "Work Sans", sans-serif;
+	}
+
+	.add-art-container h1 {
+		font-size: 32px;
+		text-align: center;
+		padding: 1rem 0;
+	}
+
+	.form-div {
+		width: 100%;
+		padding: 1.5rem  1rem;
+		box-shadow: 0 0 0 0;
+		border: none;
+		border-radius: 5px;
+	}
+
+	form  {
+		width: 100%;
+		display: grid;
+		gap: 10px;
+	}
+
+	.uploadBtn-div {
+		display: flex;
+		gap: 1rem;
+		width: 100%;
+	}
+
+	form label {
+		font-size: 18px;
+		font-weight: 600;
+	}
+
+	form input {
+		width: 100%;
+		height: 3rem;
+		padding: 1rem;
+		font-size: 16px;
+		border-radius: 5px;
+		outline: none;
+		border: 1px var(--Gray-500) solid;
+	}
+
+	input[type="file"] {
+		display: none;
+	}
+
+	form #upimg {
+		text-transform: uppercase;
+		color: #fff;
+		background-color: var(--Primary-500);
+		text-align: center;
+		padding: 1rem 0.5rem;
+		font-size: 12px;
+		user-select: none;
+		cursor: pointer;
+		width: 40%;
+	}
+
+	form #upimg:active {
+		transform: scale(0.9);
+	}
+
+	#file-name {
+		width: 80%;
+		height: 3rem;
+		padding: 1rem;
+		font-size: 18px;
+		outline: none;
+		color: var(--Gray-500);
+		border: 1px var(--Gray-500) solid;
+	}
+
+	.textarea-container {
+		position: relative;
+		width: 100%;
+		padding: 0.5rem 0;
+		border-radius: 10px;
+		font-family: "Work Sans", sans-serif;
+	}
+
+	.options {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+		gap: 12px;
+	}
+
+	.textarea-container button {
+		height: 28px;
+		width: 28px;
+		display: grid;
+		place-items: center;
+		border-radius: 3px;
+		border: none;
+		background-color: #ffffff;
+		outline: none;
+		color: #020929;
+		z-index: 0;
+	}
+
+	select {
+		padding: 5px;
+		border: 1px var(--Gray-500) solid;
+		border-radius: 3px;
+		background-color: transparent;
+		outline: none;
+	}
+
+	.options label,
+	.options select {
+		font-family: "Poppins", sans-serif;
+	}
+
+	.input-wrapper {
+		display: grid;
+		align-items: center;
+		text-align: center;
+		font-size: 18px;
+		font-weight: 300;
+	}
+
+	input[type="color"] {
+		background-color: transparent;
+		width: 40px;
+		height: 15px;
+		border: none;
+		cursor: pointer;
+	}
+
+	#text-input {
+		margin-top: 1rem;
+		border: 1px solid #dddddd;
+		padding: 1rem;
+		height: 20vh;
+		outline: none;
+	}
+
+	.active {
+		background-color: #e0e9ff;
+	}
+
+	#submit-btn {
+		font-size: 18px;
+		color: #fff;
+		margin: 2rem 5rem;
+		padding: 0.6rem 1.5rem;
+		border-radius: 5px;
+		border: none;
+		background-color: var(--Primary-500);
+		width: 180px;
+		text-align: center;
+		font-weight: 600;
+	}
+
+	#submit-btn svg {
+		margin-left: 1rem;
+	}
 }
