--- a/UI/lg-style.css
+++ b/UI/lg-style.css
@@ -99,6 +99,10 @@
 	border-radius: 5px;
 }
 
+.mobile-navbar {
+	display: none;
+}
+
 .cl-container {
 	position: relative;
 	overflow: hidden;
@@ -244,7 +248,7 @@ form button svg {
 	justify-content: center;
 	font-family: "Work Sans", sans-serif;
 	background-color: var(--Gray-800);
-	padding: 1rem 0;
+	padding: 1.3rem 0;
 }
 
 .footer-nav {
@@ -306,9 +310,84 @@ form button svg {
 
 @media screen and (max-width: 767px) {
 	.navbar {
-		display: none;
+		position:fixed;
+		top: 0;
+		right: 100%;
+		width: 100%;
+		min-height: 100vh;
+		display: block;
+		z-index: 1;
+		-webkit-transition: 0.4s;
+		transition: 0.4s;
+		background-color: rgba(165, 61, 255, 0.6);
+		backdrop-filter: blur(5px);
+		padding: 3rem;
+		border-radius: 0;
 	}
 
+	.navbar hr {
+		height: 1px;
+	}
+
+	#logo {
+		display: flex;
+		justify-content: start;
+		align-items: center;
+		gap: 12px;
+		margin: 0 2rem;
+	}
+
+	#logo-letter {
+		display: flex;
+		height: 56px;
+		padding: 0px 20px;
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 10px;
+		border-radius: 1000px;
+		background: var(--Gray-White);
+		color: var(--Primary-500);
+		font-family: "Work Sans", sans-serif;
+		font-size: 20px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: 56px;
+	}
+
+	#logo-name {
+		color: var(--Gray-White);
+		font-family: "Work Sans", sans-serif;
+		font-size: 26px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: 40px;
+	}
+
+	.menu {
+		display: grid;
+		list-style: none;
+		margin: 5rem 0;
+		width: 100%;
+	}
+
+	.menu a {
+		font-weight: 600;
+		text-decoration: none;
+		color: var(--Gray-White);
+		font-family: "Work Sans", sans-serif;
+		padding: 12px 12px;
+		font-size: 28px;
+	}
+
+	.menu a:hover {
+		height: 80%;
+		border-left: 3px var(--Gray-White) solid;
+	}
+
+	.menu svg {
+		width: 40px;
+		height: auto;
+	}
 
 	.cl-container {
 		position: relative;
@@ -343,11 +422,91 @@ form button svg {
 		z-index: 0; 
 	}
 
+	.mobile-navbar {
+		display: flex;
+		justify-content: space-between;
+		margin: 1rem 0 3rem 0;
+	}
+	#mb-logo {
+		display: flex;
+		justify-content: start;
+		align-items: center;
+		gap: 12px;
+		margin: 0;
+	}
+
+	#mb-logo-letter {
+		display: flex;
+		height: 56px;
+		padding: 0px 20px;
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 10px;
+		border-radius: 1000px;
+		background: var(--Primary-500);
+		color: var(--Gray-White);
+		font-family: "Work Sans", sans-serif;
+		font-size: 20px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: 56px;
+	}
+
+	#mb-logo-name {
+		color: var(--Gray-800);
+		font-family: "Work Sans", sans-serif;
+		font-size: 26px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: 40px;
+	}
+
+	.burgerMenu {
+		position: relative;
+		display: block;
+		width: 35px;
+		cursor: pointer;
+		appearance: none;
+		background: none;
+		outline: none;
+		border: none;
+		z-index: 1;
+	}
+
+	.burgerMenu .menuBar,
+	.burgerMenu:after, 
+	.burgerMenu:before {
+		content: '';
+		display: block;
+		width: 100%;
+		height: 5px;
+		background-color: var(--Gray-800);
+		margin: 6px 0;
+		transition: 0.4s;
+	}
+
+	.burgerMenu.is-active:before {
+		transform: rotate(-45deg) translate(-8px, 6px);
+	}
+
+	.burgerMenu.is-active:after {
+		transform: rotate(45deg) translate(-9px, -8px);
+	}
+
+	.burgerMenu.is-active .menuBar {
+		opacity: 0;
+	}
+
+	.navbar.is-active {
+		right:0;
+	}
+
 	.lg-container {
 		position: relative;
 		display: grid;
 		padding: 1rem;
 		width: 100%;
+		height: 100%;
 		top: 0;
 		left: 0;
 		box-shadow: 0 0 0 0;
@@ -383,33 +542,50 @@ form button svg {
 	}
 
 	.lg-div {
+		position: relative;
 		width: 100%;
 		margin-left: 0;
 		margin-top: 2rem;
+		background-color: #fff;
 	}
 
 	.lg-div h1 {
+		position: relative;
 		font-size: 40px;
 		font-weight: 600;
 		width: 90%;
 	}
 
 	.lg-div h1 span {
+		position: relative;
 		color: var(--Primary-500);
 	}
 
 	.lg-div p {
+		position: relative;
 		font-size: 16px;
 		font-weight: 200;
 		padding: 1rem 0;
 	}
 
 	form {
+		position: relative;
 		display: grid;
-		gap: 2rem;
+		gap: 1rem;
+		width: 100%;
+	}
+
+	.valid-div {
+		color: crimson;
+		margin-top: 0.1rem;
+	}
+
+	#errorNote {
+		display: none;
 	}
 
 	form input {
+		position: relative;
 		height: 2rem;
 		padding: 1rem;
 		border: none;
@@ -418,11 +594,17 @@ form button svg {
 		font-weight: 200;
 	}
 
+	form input[type="password"] {
+		margin-top: 1rem;
+	}
+
+
 	form button {
+		position: relative;
 		font-size: 18px;
 		color: #fff;
 		padding: 1rem 1.5rem;
-		margin-top: 2rem;
+		margin-top: 1rem;
 		margin-bottom: 2rem;
 		border-radius: 5px;
 		border: none;
@@ -433,10 +615,12 @@ form button svg {
 	}
 
 	form button svg {
+		position: relative;
 		margin-left: 1rem;
 	}
 
 	.footer-container {
+		position: relative;
 		display: grid;
 		justify-content: center;
 		font-family: "Work Sans", sans-serif;
@@ -446,6 +630,7 @@ form button svg {
 	}
 
 	.footer-nav {
+		position: relative;
 		display: grid;
 		width: 100%;
 		margin-top: 2rem;
@@ -489,6 +674,7 @@ form button svg {
 	}
 
 	.ft-menu {
+		position: relative;
 		display: grid;
 		align-items: flex-start;
 		list-style: none;
@@ -496,6 +682,7 @@ form button svg {
 	}
 
 	.ft-menu a {
+		position: relative;
 		text-decoration: none;
 		font-family: "Work Sans", sans-serif;
 		padding: 1rem 2rem;
