--- a/UI/style.css
+++ b/UI/style.css
@@ -99,6 +99,10 @@
 	border-radius: 5px;
 }
 
+.mobile-navbar {
+	display: none;
+}
+
 .intro-container {
 	position: relative;
 	overflow: hidden;
@@ -185,7 +189,7 @@
 .summary-div{
 	display: grid;
 	background-color: var(--Gray-bg);
-	width: 200px;
+	width: 30%;
 	padding: 6px 12px;
 	font-family: "Work Sans", sans-serif;
 	justify-content: center;
@@ -526,6 +530,7 @@
 .bl-container {
 	position: relative;
 	overflow: hidden;
+	width: 100%;
 }
 
 .bl-container::before {
@@ -575,6 +580,7 @@
 
 .bl-cards {
 	display: grid;
+	width: 80%;
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: 1fr, 1fr;
 	gap: 12px;
@@ -680,11 +686,12 @@
 }
 
 .test-div {
-	margin-left: 330px;
-	width: 700px;
+	margin-top: 3rem;
+	margin-left: 20rem;
+	margin-bottom: 1rem;
+	width: 45rem;
 	text-align: center;
 	font-family: "Work Sans", sans-serif;
-	margin-top: 3rem;
 	z-index: 1;
 }
 
@@ -715,6 +722,7 @@
 	z-index: 1;
 	background: #fff;
 	box-shadow: 0 0 20px 0;
+
 }
 
 .addr-container h1 {
@@ -867,7 +875,6 @@ form button svg {
 	font-family: "Work Sans", sans-serif;
 	background-color: var(--Gray-800);
 	padding: 6rem 0;
-
 }
 
 .footer-nav {
@@ -929,7 +936,162 @@ form button svg {
 
 @media screen and (max-width: 767px) {
 	.navbar {
-		display: none;
+		position:fixed;
+		top: 0;
+		right: 100%;
+		width: 100%;
+		min-height: 100vh;
+		display: block;
+		z-index: 1;
+		-webkit-transition: 0.4s;
+		transition: 0.4s;
+		background-color: rgba(165, 61, 255, 0.6);
+		backdrop-filter: blur(5px);
+		padding: 3rem;
+		border-radius: 0;
+	}
+
+	.navbar hr {
+		height: 1px;
+	}
+
+	#logo {
+		display: flex;
+		justify-content: start;
+		align-items: center;
+		gap: 12px;
+		margin: 0 2rem;
+	}
+
+	#logo-letter {
+		display: flex;
+		height: 56px;
+		padding: 0px 20px;
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 10px;
+		border-radius: 1000px;
+		background: var(--Gray-White);
+		color: var(--Primary-500);
+		font-family: "Work Sans", sans-serif;
+		font-size: 20px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: 56px;
+	}
+
+	#logo-name {
+		color: var(--Gray-White);
+		font-family: "Work Sans", sans-serif;
+		font-size: 26px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: 40px;
+	}
+
+	.menu {
+		display: grid;
+		list-style: none;
+		margin: 5rem 0;
+		width: 100%;
+	}
+
+	.menu a {
+		font-weight: 600;
+		text-decoration: none;
+		color: var(--Gray-White);
+		font-family: "Work Sans", sans-serif;
+		padding: 12px 12px;
+		font-size: 28px;
+	}
+
+	.menu a:hover {
+		height: 80%;
+		border-left: 3px var(--Gray-White) solid;
+	}
+
+	.menu svg {
+		width: 40px;
+		height: auto;
+	}
+
+	.mobile-navbar {
+		display: flex;
+		justify-content: space-between;
+		margin: 1rem 0 3rem 0;
+	}
+	#mb-logo {
+		display: flex;
+		justify-content: start;
+		align-items: center;
+		gap: 12px;
+		margin: 0;
+	}
+
+	#mb-logo-letter {
+		display: flex;
+		height: 56px;
+		padding: 0px 20px;
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 10px;
+		border-radius: 1000px;
+		background: var(--Primary-500);
+		color: var(--Gray-White);
+		font-family: "Work Sans", sans-serif;
+		font-size: 20px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: 56px;
+	}
+
+	#mb-logo-name {
+		color: var(--Gray-800);
+		font-family: "Work Sans", sans-serif;
+		font-size: 26px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: 40px;
+	}
+
+	.burgerMenu {
+		position: relative;
+		display: block;
+		width: 35px;
+		cursor: pointer;
+		appearance: none;
+		background: none;
+		outline: none;
+		border: none;
+		z-index: 1;
+	}
+
+	.burgerMenu .menuBar,
+	.burgerMenu:after, 
+	.burgerMenu:before {
+		content: '';
+		display: block;
+		width: 100%;
+		height: 5px;
+		background-color: var(--Gray-800);
+		margin: 6px 0;
+		transition: 0.4s;
+	}
+
+	.burgerMenu.is-active:before {
+		transform: rotate(-45deg) translate(-8px, 6px);
+	}
+
+	.burgerMenu.is-active:after {
+		transform: rotate(45deg) translate(-9px, -8px);
+	}
+
+	.burgerMenu.is-active .menuBar {
+		opacity: 0;
+	}
+
+	.navbar.is-active {
+		right:0;
 	}
 
 	.intro-container {
@@ -938,9 +1100,8 @@ form button svg {
 		overflow: visible;
 		grid-template-columns: 1fr, 1fr;
 		padding: 1rem;
-		width: 100vw;
+		width: 100%;
 		height: 100%;
-		background-color: green;
 	}
 
 	.intro-container::before {
@@ -949,7 +1110,7 @@ form button svg {
 
 	.gt-container {
 		display: grid;
-		width: 100vw;
+		width: 100%;
 		z-index: 1;
 	}
 
@@ -1150,7 +1311,7 @@ form button svg {
 
 	.sk-container {
 		position: relative;
-		width: 100vw;
+		width: 100%;
 		margin-top: 0;
 		background-color: var(--Gray-50);
 		font-family: "Work Sans", sans-serif;
@@ -1159,7 +1320,7 @@ form button svg {
 
 	.skills-div {
 		display: grid;
-		width: 100vw;
+		width: 100%;
 		border: none;
 		border-radius: 10px;
 		margin: 5px 0;
@@ -1167,7 +1328,7 @@ form button svg {
 	}
 
 	.sk-summary {
-		width: 100vw;
+		width: 100%;
 		margin: 1rem 4rem 0 0;
 		text-align: center;
 	}
@@ -1180,7 +1341,7 @@ form button svg {
 	.sk-cards {
 		display: grid;
 		margin: 1.3rem 0;
-		width: 100vw;
+		width: 100%;
 	}
 
 	.first-cards {
@@ -1229,7 +1390,7 @@ form button svg {
 	}
 
 	.pf-container {
-		width: 100vw;
+		width: 100%;
 	}
 
 	.pf-title {
@@ -1253,14 +1414,15 @@ form button svg {
 	.pf-cards {
 		display: grid;
 		grid-template-columns: repeat(1, 1fr);
-		gap: 20px;
-		margin: 2rem;
+		gap: 1rem;
+		margin: 2rem 0;
 		font-family: "Work Sans", sans-serif;
-		width: 100vw;
+		width: 100%;
 	}
 
 	.pf-card {
-		width: 340px;
+		width: 80%;
+		margin: 0 10%;
 		border-radius: 10px;
 		border: 1px var(--Gray-50) solid;
 		flex-shrink: 0;
@@ -1315,7 +1477,7 @@ form button svg {
 	.bl-container {
 		position: relative;
 		overflow: visible;
-		width: 100vw;
+		width: 100%;
 	}
 
 	.bl-container::before {
@@ -1362,24 +1524,26 @@ form button svg {
 		text-align: center;
 		padding: 0 1rem;
 		margin-top: 2rem;
-		width: 100vw;
+		width: 100%;
 		z-index: 1;
 	}
 
 	.bl-cards {
+		position: relative;
 		display: grid;
-		width: 100vw;
+		width: 100%;
 		grid-template-columns: repeat(1, 1fr);
 		grid-template-rows: 1fr, 1fr;
 		justify-content: center;
-		gap: 20px;
-		margin: 2rem;
+		gap: 1rem;
+		margin: 2rem 0;
 		font-family: "Work Sans", sans-serif;
 		z-index: 1;
 	}
 
 	.bl-card {
-		width: 340px;
+		width: 80%;
+		margin: 0 10%;
 		border-radius: 10px;
 		border: 1px var(--Gray-50) solid;
 		flex-shrink: 0;
@@ -1395,7 +1559,7 @@ form button svg {
 	.bl-card img {
 		max-width: 100%;
 		max-height: 100%;
-		width: 340px;
+		width: 360px;
 		border-top-left-radius: 10px;
 		border-top-right-radius: 10px;
 		z-index: 1;
@@ -1418,16 +1582,10 @@ form button svg {
 		margin-top: 1rem;
 	}
 
-	.pag-container {
-		display: flex;
-		justify-content: center;
-		z-index: 1;
-	}
-
 	.test-container {
 		position: relative;
 		overflow: visible;
-		width: 100vw;
+		width: 100%;
 	}
 
 	.test-container::before {
@@ -1479,11 +1637,10 @@ form button svg {
 	}
 
 	.test-div {
-		margin: 1rem;
+		margin: 1rem 0;
 		width: 100%;
 		text-align: center;
 		font-family: "Work Sans", sans-serif;
-		margin-top: 3rem;
 		z-index: 1;
 	}
 
@@ -1496,10 +1653,10 @@ form button svg {
 	}
 
 	.lst-containers {
-		display: none;
 		position: relative;
 		display: grid;
 		font-family: "Work Sans", sans-serif;
+		width: 100%;
 	}
 
 	.contact-container {
@@ -1507,7 +1664,7 @@ form button svg {
 		top: 0;
 		display: grid;
 		gap: 4rem;
-		width: 100vw;
+		width: 90%;
 		border: none;
 		border-radius: 0;
 		margin: 1rem 0;
@@ -1676,6 +1833,7 @@ form button svg {
 		font-family: "Work Sans", sans-serif;
 		background-color: var(--Gray-800);
 		padding: 6rem 0;
+		width: 98%;
 
 	}
 
