--- a/UI/style.css
+++ b/UI/style.css
@@ -1017,10 +1017,16 @@ form button svg {
 	}
 
 	.mobile-navbar {
+		position: fixed;
 		display: flex;
 		justify-content: space-between;
-		margin: 1rem 0 3rem 0;
+		width: 100%;
+		margin: 0;
+		padding: 2rem;
+		background-color: var(--Gray-White);
+		z-index: 1;
 	}
+
 	#mb-logo {
 		display: flex;
 		justify-content: start;
@@ -1113,6 +1119,7 @@ form button svg {
 		display: grid;
 		width: 100%;
 		z-index: 0;
+		margin-top: 8rem;
 	}
 
 	.gt-div {
@@ -1181,7 +1188,7 @@ form button svg {
 		border-radius: 0;
 		margin-left: 0;
 		padding: 0;
-		z-index: 1;
+		z-index: 0;
 		background: #fff;
 	}
 
@@ -1195,7 +1202,7 @@ form button svg {
 		width: 300px;
 		height: 300px;
 		margin: 50px 1rem 0 1rem;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	.social-media {
@@ -1210,7 +1217,7 @@ form button svg {
 		border-radius: 5px;
 		margin-left: 2.5rem;
 		top: 20.5rem;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	.smedia svg {
@@ -1226,14 +1233,14 @@ form button svg {
 		background-color: var(--Primary-500);
 		border-radius: 5px;
 		fill: #fff;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	.cv {
 		display: grid;
 		width: 300px;
 		margin: 60px 1rem 30px 1rem;
-		z-index: 1;
+		z-index: 0;
 
 	}
 
@@ -1241,7 +1248,7 @@ form button svg {
 		font-family: "Work Sans", sans-serif;
 		font-size: 22px;
 		font-weight: 600;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	.cv p {
@@ -1249,7 +1256,7 @@ form button svg {
 		font-size: 15px;
 		color: var(--Gray-500);
 		padding: 1rem 0;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	.cta button {
@@ -1259,7 +1266,7 @@ form button svg {
 		font-family: "Work Sans", sans-serif;
 		font-size: 14px;
 		font-weight: 600;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	#prj-btn {
@@ -1267,14 +1274,14 @@ form button svg {
 		background-color: var(--Primary-500);
 		color: #fff;
 		margin-right: 20px;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	#cv-btn {
 		background-color: transparent;
 		border: 2px var(--Primary-500) solid;
 		color: var(--Primary-500);
-		z-index: 1;
+		z-index: 0;
 	}
 
 	.colorful-bg {
@@ -1376,7 +1383,7 @@ form button svg {
 		background-color: var(--Primary-500);
 		border-radius: 5px;
 		fill: #fff;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	.card h1 {
@@ -1511,7 +1518,7 @@ form button svg {
 		text-align: center;
 		font-family: "Work Sans", sans-serif;
 		margin-top: 3rem;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	.bl-title h1 {
@@ -1526,7 +1533,7 @@ form button svg {
 		padding: 0 1rem;
 		margin-top: 2rem;
 		width: 100%;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	.bl-cards {
@@ -1563,12 +1570,12 @@ form button svg {
 		width: 360px;
 		border-top-left-radius: 10px;
 		border-top-right-radius: 10px;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	.bl-text {
 		padding: 1rem;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	.bl-react {
@@ -1576,7 +1583,7 @@ form button svg {
 		color: var(--Gray-400);
 		font-size: 10px;
 		gap: 5px;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	#bl-desc {
@@ -1619,7 +1626,7 @@ form button svg {
 		text-align: center;
 		font-family: "Work Sans", sans-serif;
 		margin-top: 3rem;
-		z-index: 1;
+		z-index: 0;
 		width: 100%;
 	}
 
@@ -1634,7 +1641,7 @@ form button svg {
 		text-align: center;
 		padding: 0 2rem;
 		margin-top: 2rem;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	.test-div {
@@ -1766,7 +1773,7 @@ form button svg {
 		background-color: var(--Primary-500);
 		border-radius: 5px;
 		fill: #fff;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	.qrry-container {
