--- a/UI/style.css
+++ b/UI/style.css
@@ -719,7 +719,7 @@
 	border: none;
 	border-radius: 10px;
 	margin-left: 150px;
-	padding: 50px;
+	padding: 30px;
 	z-index: 1;
 	background: #fff;
 	box-shadow: 0 0 20px 0;
@@ -828,14 +828,14 @@
 form {
 	display: grid;
 	grid-template-columns: 1fr, 1fr;
-	gap: 1rem;
+	gap: 0;
 	margin-top: 2.5rem;
 }
 
 form input {
 	font-size: 18px;
 	color: var(--Gray-500);
-	padding: 0.5rem 0;
+	padding: 0.8rem 0;
 	outline: none;
 	border: none;
 	border-bottom: 1px var(--Gray-50) solid;
@@ -848,6 +848,13 @@ form input:hover {
 form input:hover::placeholder {
 	color: var(--Primary-500);
 }
+
+form .valid-p {
+	color: crimson;
+	display: none;
+	font-weight: 200;
+}
+
 
 form button {
 	font-size: 18px;
